# kvgate

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  LICENSE  Makefile  PROJECT_CONTEXT.md  PROJECT_PLAN.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
config/: config.demo.yaml  config.docker.yaml  config.example.yaml  config.kvaware.example.yaml  config.mock-kvaware.yaml  config.mock-rr.yaml  config.overhead.yaml  gpu.yaml
dashboard/: .gitignore  .run-dev.sh  DEPLOY.md  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: charts.tsx  docs.tsx  live.tsx  results.tsx  widgets.tsx
dashboard/lib/: api.ts  results.ts
deploy/: prometheus.yml
deploy/grafana/dashboards/: infergate.json  kvgate.json
docs/: BENCHMARK.md  BENCHMARK_REPORT.md  CHANGELOG.md  DECISION_GATES.md  HOW_ROUTING_WORKS.md  KV_AWARE_PLAN.md  RESEARCH_KV_CACHE.md  RESULTS.md  RESUME.md  RUNPOD_GUIDE.md
loadtest/: locustfile.py  multimodal_bench.py  overhead_bench.py
results/: Bp.json  Bp2.json  Cp.json  Cp2.json  overhead.json  overhead_peak.json
results/offload/: control.json  cpu.json  cpuproof.out  redis.json
results/routing/: D.json  E.json  route2.out
scripts/: capture_dashboard.sh  compare_results.py  gen_images.py  ig_cpuproof.sh  make_charts.py
src/infergate/: __init__.py  app.py  cli.py  config.py  models.py  server.py  service.py
src/infergate/api/: admin.py  chat.py  models.py
src/infergate/cache/: __init__.py  base.py  embedders.py  manager.py  memory.py  redis_store.py
src/infergate/middleware/: auth.py
src/infergate/observability/: metrics.py
src/infergate/providers/: __init__.py  anthropic.py  mock.py  openai.py
src/infergate/ratelimit/: __init__.py  limiter.py
src/infergate/routing/: __init__.py  affinity.py  affinity_redis.py  keying.py  router.py  state.py
src/kvgate/: __init__.py  app.py  cli.py  config.py  models.py  server.py  service.py
src/kvgate/api/: __init__.py  chat.py  health.py
src/kvgate/cache/: base.py  embedders.py  redis_store.py
src/kvgate/middleware/: __init__.py  auth.py
tests/: conftest.py  test_affinity.py  test_affinity_redis.py  test_bench_trace.py  test_budget.py  test_cache.py  test_chat_api.py  test_config.py  test_keying.py  test_prefix_routing.py  test_providers.py  test_ratelimit.py  test_router.py
(+14 files in other folders)
